--- a/Project/index.html
+++ b/Project/index.html
@@ -51,7 +51,7 @@
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="#home">home</a></li>
 							<li><a href="#about">about</a></li>
-							<li><a href="#portfolio">Images</a></li>
+							<li><a href="#portfolio">Gallery</a></li>
 							<li><a href="index.html">Contact us</a></li>
 							<li><a href="http://127.0.0.1:5000/">Create an Account</a></li>
 						</ul>
@@ -80,7 +80,7 @@
 				<img src="images/slider/slider1.jpg">
 
 				<div class="caption">
-					<p>Have an account? Create one!</p>
+					<p>""</p>
 					<form action="http://127.0.0.1:5000/">
    				    	<input type="submit" class="btn btn-info" value="Create Account">
 					</form>
@@ -91,7 +91,7 @@
 				<img src="images/slider/slider2.jpg">
 
 				<div class="caption">
-					<p>Have an account? Create one!</p>
+					<p>Have an account?</p>
 					<form action="http://127.0.0.1:5000/">
    				    	<input type="submit" class="btn btn-info" value="Create Account">
 					</form>
@@ -102,7 +102,7 @@
 				<img src="images/slider/slider3.jpg">
 
 				<div class="caption">
-					<p>Have an account? Create one!</p>
+					<p>Have an account?</p>
 					<form action="http://127.0.0.1:5000/">
    				    	<input type="submit" class="btn btn-info" value="Create Account">
 					</form>
@@ -132,50 +132,42 @@
 		<!--about wrapper left-->
 		<div class="container">
 
-			<div class="row">
-				<div class="col-xs-12 hidden-sm col-md-5">
-
-					<div class="about-left">
-						<img src="images/about/about1.jpg" alt="">
-					</div>
-
-				</div>
 
 				<!--about wrapper right-->
-				<div class="col-xs-12 col-md-7">
+				<div class="col-md-2 col-md-offset-6"></div>
 					<div class="about-right">
 						<div class="about-right-heading">
 							<h1>Software used</h1>
 						</div>
 
-						<div class="about-right-boot">
+						<div class="about-right-best">
 							<div class="about-right-wrapper">
 								<h3>The Website</h3>
 								<p>Bootstrap was used for the index.html page to create
-									a smooth template. For the backend/login page, Flask
+									a smooth template. For the backend/login page Flask
 									was used with the flask-bootstrap library.
 								</p>
 							</div>
 						</div>
 
-						<div class="about-right-best">
+						<div class="about-right-support">
 							<div class="about-right-wrapper">
 								<h3>The Game</h3>
 								<p>Unreal Engine 4 was used for the creation
-									of the samle video game. Additional
+									of the sample video game. Additional
 									software like blender was used
 									for 3D modeling. A plugin was
-									used for database connection.</p>
+									used for the database connection.</p>
 							</div>
 						</div>
 
-						<div class="about-right-support">
+						<div class="about-right-boot">
 							<div class="about-right-wrapper">
 								<h3>The Database</h3>
 								<p>For the database SQL Server 2017 was used.
 									To connect the website to the database
 									we used Pyodbc inside of the main.py
-									script, which contains the code
+									script that contains the code
 									for the login page.
 								   </p>
 							</div>
@@ -197,7 +189,7 @@
 
 				<div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
 					<div class="portfolio-heading">
-						<h2>Images</h2>
+						<h2>Gallery</h2>
 						<p>View some of our finest images.</p>
 					</div>
 				</div>
@@ -307,7 +299,7 @@
 						<ul class="list-unstyled list-inline pull-right">
 							<li><a href="#home">Home</a></li>
 							<li><a href="#about">About</a></li>
-							<li><a href="#portfolo">Images</a></li>
+							<li><a href="#portfolo">Gallery</a></li>
 							<li><a href="contact us.html">Contact Us</a></li>
 							<li><a href="http://127.0.0.1:5000/">Create an Account</a></li>
 						</ul>
